# music_player

./: Cargo.toml  README.md  index.html
common-const/: Cargo.toml
common-const/src/: lib.rs
src/: app.rs  main.rs  router.rs  styles.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: customs_handle.rs  lib.rs  main.rs
src/components/: mod.rs
src/components/app_layout/: app_layout.rs
src/components/card/: card.rs  mod.rs  styles.rs
src/components/icon/: icon.rs  mod.rs  styles.rs
src/components/input/: input_base.rs  mod.rs  styles.rs
src/components/music_player_component/: mod.rs  music_player_component.rs  styles.rs
src/components/player/: mod.rs  play_progress_bar.rs  styles.rs
src/components/top_list_card/: mod.rs  styles.rs  top_list_card.rs
src/config_provide/: context.rs
src/found_music_page/: found_music_page.rs  mod.rs  styles.rs
src/header/: header.rs  header_style.rs  mod.rs
src/header/application_control_menu/: application_control_menu.rs
src/header/right_config/: mod.rs  right_config.rs  styles.rs
src/header/search/: mod.rs  search.rs  styles.rs
src/home_page/: home.rs  home_style.rs  mod.rs
src/home_page/header/: header.rs  header_style.rs  mod.rs
src/home_page/sidebar/: mod.rs  sidebar.rs  (+1 more)
src/icons/: backward_fast_icon.rs  block_icon.rs  border_icon.rs  close_icon.rs  folder_open_icon.rs  forward_fast_icon.rs  left_icon.rs  line_icon.rs  mail.rs  mod.rs  nav_struct.rs  pause_icon.rs  play_icon.rs  retweet.rs  right_icon.rs  search_icon.rs  setting_icon.rs  user_icon.rs  wrench_icon.rs
src/utils/: mod.rs
(+9 files in other folders)
