[package]
name = "music_player-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["DomRect"] }
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
stylist = { version = "0.13.0", features = ["yew"] }
yew-router = "0.18.0"
log = "0.4.27"
console_log = "1.0.0"
common-const =  {path = "common-const"}
gloo = "0.11.0"


[workspace]
members = [ "common-const","src-tauri"]
